@@ -111,8 +111,8 @@ sub edit_page {
                  . "exists.\n";
         }
         $rester->accept('text/plain');
-        my $tmpl_tags = $rester->get_pagetags($args{template});
-        push @$tags, @$tmpl_tags if $tmpl_tags;
+        my @tmpl_tags = $rester->get_pagetags($args{template});
+        push @$tags, @tmpl_tags;
     }
 
     if ($args{output}) {
