@@ -3,6 +3,7 @@ Revision history for Socialtext-Utils
 0.10 - not released yet
   - Copy tags from template pages when they're used
   - Add Socialtext::Resting::Getopt to handle command line args
+  - Fix Mock Rester to match real library's get_pagetags()
 
 0.09 - Wed Feb 14 17:03:59 PST 2007
   - Fixed t/wikedit.t when a ~/.wikeditrc isn't there
